--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,8 @@
     <title>Snake</title>
 </head>
 <body>
-    
-    <canvas id="snake-canvas" width="1080" height="720"></canvas>
+    <canvas id="snake-canvas" width="720" height="480"></canvas>
     <button id="start-button">Spiel starten</button>
-
     <script src="./script.js"></script>
-
 </body>
 </html>
