--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <!-- Importiere die style.css Datei (CSS) -->
     <link rel="stylesheet" href="./style.css">
     <!-- Setze den Titel der Seite auf "Willy Willy" -->
-    <title>Willy Willy</title>
+    <title>Albert-Brunhilde 42</title>
 </head>
 <body>
+    <h1 class="name">Albert-Brunhilde</h1>
     <!-- Erstelle das Canvas mit einer ID von "snake-canvas", einer Klasse von ".snake-canvas", einer weite von 720px und einer höhe von 480px (16:9 Format) -->
     <canvas id="snake-canvas" class="snake-canvas" width="720" height="480"></canvas>
     <!-- Erstelle den Knopf, um das Spiel zu starten mit dem Text "Spiel starten", einer ID von "start-button" und einer Klasse von ".start-button" -->
