--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             <li class="single-rule">Du siehst die Anzahl deiner Punkte oben links</li>
         </ul>
     </div>
+    <div class="settings">
+        <ul class="setting-list">
+            <li class="single-setting"><input type="number" placeholder="Zeilen"></li>
+            <li class="single-setting"><input type="number" placeholder="Spalten"></li>
+        </ul>
+    </div>
     <img src="./assets/img/icon.png" alt="LOGO" class="logo">
     <script src="./script.js"></script>
 </body>
